# slang-rs

./: Cargo.toml
.github/workflows/: ci.yml
slang/: Cargo.toml
slang-sys/: Cargo.toml  build.rs  generate.ps1  generate.sh
slang-sys/src/: bindings.rs
slang/src/: enums.rs
