[package]
name = "slang-sys"
version = "0.1.3"
authors = ["Michael Tang <tangmi@uw.edu>"]
links = "slang"
build = "build.rs"
license = "MIT/Apache-2.0"
repository = "https://github.com/tangmi/slang-rs/"
documentation = "https://docs.rs/slang-sys/0.1.3/"
description = "FFI bindings to slang"
readme = "README.md"
edition = "2021"
